--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
 }
 
 .btn-primary {
-    color: var(--bs-white);
+    color: #000000;
 }
 
 
@@ -74,7 +74,7 @@
 .navbar .navbar-nav .nav-link {
     margin-right: 25px;
     padding: 40px 0;
-    color: var(--bs-white);
+    color: #000000;
     font-size: 17px;
     text-transform: uppercase;
     outline: none;
@@ -139,7 +139,7 @@
     right: 0;
     bottom: 0;
     padding-top: 100px;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(199, 198, 195, .7);
     z-index: 1;
 }
 
@@ -170,12 +170,12 @@
 
 .page-header {
     padding-top: 200px;
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel-1.jpg) top center no-repeat;
+    background: linear-gradient(rgba(199, 198, 195, .7), rgba(199, 198, 195, .7)), url(../img/carousel-1.jpg) top center no-repeat;
     background-size: cover;
 }
 
 .page-header .breadcrumb-item + .breadcrumb-item::before {
-    color: var(--bs-white);
+    color: #000000;
 }
 
 
@@ -243,6 +243,13 @@
     position: relative;
     margin-top: 2.5rem;
     overflow: hidden;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.service-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
 }
 
 .service-item .service-img {
@@ -265,19 +272,21 @@
 
 .service-item.service-item-left {
     border-radius: 500px 0 0 500px;
-    background: linear-gradient(to right, var(--bs-secondary), var(--bs-dark));
+    background: #C7C6C3;
+    box-shadow: -8px 8px 25px rgba(0, 0, 0, 0.25);
 }
 
 .service-item.service-item-right {
     border-radius: 0 500px 500px 0;
-    background: linear-gradient(to left, var(--bs-secondary), var(--bs-dark));
+    background: #C7C6C3;
+    box-shadow: 8px 8px 25px rgba(0, 0, 0, 0.25);
 }
 
 @media (max-width: 767.98px) {
     .service-item.service-item-left,
     .service-item.service-item-right {
         border-radius: 500px 500px 0 0;
-        background: linear-gradient(to bottom, var(--bs-secondary), var(--bs-dark));
+        background: #C7C6C3;
         text-align: center;
     }
 }
@@ -297,7 +306,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(199, 198, 195, .7);
 }
 
 .team-item .team-body {
@@ -313,7 +322,7 @@
     height: calc(100% - 60px);
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(199, 198, 195, .7);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -368,7 +377,7 @@
     height: 60px;
     margin: 0 5px;
     padding: 10px;
-    background: var(--bs-dark);
+    background: #C7C6C3;
     border-radius: 100px;
     transition: .5s;
 }
@@ -390,19 +399,6 @@
 
 
 /*** Footer ***/
-@keyframes footerAnimatedBg {
-	0% {
-        background-position: 0 0;
-    }
-
-	100% {
-        background-position: -1000px 0;
-    }
-}
-
 .footer {
-	background-image: url(../img/footer-bg.png);
-	background-position: 0px 0px;
-    background-repeat: repeat-x;
-	animation: footerAnimatedBg 50s linear infinite;
+    background-color: #C7C6C3;
 }
